# PhotoNext_Middleware

./: CMakeLists.txt  README.md
config/: config.hpp.in  smartscan_config.txt
include/CommonLibraries/libsmartscan/: data_queue.h  msg_queue.h  smartscan_constants.h  smartscan_utils.h  socket.h
include/CommonLibraries/libutils/: utils.h
include/SmartScanBlue/: client.hpp  config.hpp  interrogator.hpp  listener.hpp  parser.hpp
src/CommonLibraries/libsmartscan/: data_queue.c  msg_queue.c  smartscan_utils.c  socket.c
src/CommonLibraries/libutils/: utils.c
src/SmartScanBlue/: client.cpp  listener.cpp  mongoDAO.cpp  parser.cpp
